--- a/Register/style.css
+++ b/Register/style.css
@@ -1,16 +1,15 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 body
 {
-    background: Black;
+background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../imeges/W.jpeg);
+    background-size:cover;
+    background-position: center;
+    color: white !important;
 }
 .row
 {
     background :#313335;
-    border-radius: 40px;
+    border-radius: 70px;
+    opacity: .7;
 }
 .navbar-toggler-icon
 {
@@ -25,12 +24,13 @@ body
 .navbar-toggler-icon span > span
 {
     border-radius:3px;
-    background-color: gray;
+    background-color: gray solid;
     padding: 3px;
+  
 }
 .navbar-brand
 {
-   font-size: 16px;
+   font-size: 17px;
     font-weight: bold;
     color: white;
 }
@@ -49,7 +49,7 @@ body
 }
 a
 {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
     color: white;
 }
@@ -61,12 +61,15 @@ img
 {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
+    padding-top: 100px;
+    
 }
 
 h4
 {
     color: white;
     font-family:sans-serif;
+    tab-size: 20px;
 }
 .btn1
 {
@@ -84,11 +87,23 @@ h4
 .btn1:hover
 {
     background: white;
-    border: 1px solid;
+    border: 1px ;
     color:red;
 }
 #a
 {
     text-align: center;
     color: red;
+}
+h1
+{
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    padding-top: 50px;
+}
+
+#h1 span
+{
+     color:red;
+   
 }
