--- a/logInServerSide/views/index.ejs
+++ b/logInServerSide/views/index.ejs
@@ -4,7 +4,7 @@
 <a href="/register" class="btn btn-lg btn-primary">Register</a>
 <a href="/login" class="btn btn-lg btn-secondary">Log In</a>
 -->
-<link  rel="stylesheet" href="/img">
+
 <link rel="stylesheet" href="/css/style1.css">
 <section id="title" class="title">
     <div class="container-fluid">
@@ -78,12 +78,13 @@
 	<div id="carousel-slide"class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="hover">
   <div class="carousel-inner">
 
+               
                <div class="carousel-item active">
                    <h2>Test</h2>
-    	<h4>I have been cooking since I was 8 years<br> old.I considered myself an artist who <br>developed into a craftsman.</h4>
-        <img src="../Ass/img/car_oil_change.png"  class="cooking-image" alt="">
-                   <h4>mary </h4>
-    </div>  
+    	<h4>From these rapid developments, serving people became easy and fast<br> This service saved me time, <br> so I can request a car service any time I need. </h4>
+        <img src="imeges/car_oil_change.png"  class="car-image" alt="">
+                   <h4>Mohammad </h4>
+    </div>   
               
     
             <div class="carousel-item">
