--- a/logInServerSide/views/index.ejs
+++ b/logInServerSide/views/index.ejs
@@ -38,7 +38,7 @@
                <button type="button" class="btn btn-outline-light"> <a href="/Station">Station </a></button>
       </div>
       <div class="col-lg-6 col-md-6 animate__animated animate__backInRight">
-      <img class="image-title"  src="../Ass/img/Light%20Blue%20Cute%20Car%20Cartoon%20Car%20Wash%20Poster_opt.png">
+      <img class="image-title"  src="/img/Light%20Blue%20Cute%20Car%20Cartoon%20Car%20Wash%20Poster_opt.png">
            </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
           <div class="container">
           <div class="row">
               <div class="col-lg-6 col-md-6 animate__animated animate__flipInX">
-              <img  class="image-content" src="../Ass/img/1.jpg">
+              <img  class="image-content" src="/img/1.jpg">
               </div>
               <div  class="col-lg-6 col-md-6 animate__animated animate__slideInRight">
                   <h1> Welcome to our new and improved  car  service</h1>
@@ -61,7 +61,7 @@
           </div>
           <div class="row">
               <div class="col-lg-6 col-md-6 ">
-              <img  class="image-content" src="../Ass/img/car_oil_change_opt.png">
+              <img  class="image-content" src="/img/car_oil_change_opt.png">
               </div>
               <div  class="col-lg-6 col-md-6 ">
                   <h1> Welcome to our new  car  service</h1>
@@ -82,24 +82,24 @@
                <div class="carousel-item active">
                    <h2>Test</h2>
     	<h4>From these rapid developments, serving people became easy and fast<br> This service saved me time, <br> so I can request a car service any time I need. </h4>
-        <img src="imeges/car_oil_change.png"  class="car-image" alt="">
+        <img src="/img/CA_opt (1).jpg"  class="car-image" alt="">
                    <h4>Mohammad </h4>
     </div>   
               
     
-            <div class="carousel-item">
-                <h2>Test</h2>
-    	<h4>Creativity is a baker’s greatest asset.<br> Their ability to take basic ingredients and <br>transform them into a truly magical art form</h4>
-      <img src="../Ass/img/car_oil_change.png" class="cooking-image" alt="">
-                <h4>john </h4>
-    </div> 
+                <div class="carousel-item">
+    	<h4>Providing this service to people who do not know the area helped them a lot. <br>Through Google Map, they can identify the stations and request this service ,<br> when it comes to cooking. The whole culinary </h4>
+      <img src="/img/CA__opt.jpg" class="car-image" alt="">
+                   <h4>Noor</h4>
+      </div>
                   
 
-               <div class="carousel-item">
-    	<h4>Food decoration isn’t the only form of art<br> when it comes to cooking. The whole culinary<br> industry can be an art form.</h4>
-      <img src="../Ass/img/car_oil_change.png" class="cook-image" alt="">
-                   <h4>mohammed</h4>
-      </div> 
+            <div class="carousel-item">
+                <h2>Test</h2>
+    	<h4>It is difficult for me to go to the station to wash the car, I do not have the time to go to the station and wash my car<br> I do not have the time to go to the station and wash my car<br> Wonderful service!</h4>
+      <img src="/img/undraw_profile_pic_ic5t_opt.png" class="car-image" alt="">
+                <h4>Ala'a </h4>
+    </div>
            
    <a class="carousel-control-prev" href="#carousel-slide" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
@@ -120,16 +120,16 @@
               
               
         <div class="feature-box col-lg-4 animate__animated animate__flipInX animate__delay-0s">
-                  <img class="image" src="../Ass/img/a1.jpg">
+                  <img class="image" src="/img/a1.jpg">
                   <h3>Best Service</h3>
               </div>
               
          <div class="feature-box col-lg-4 animate__animated animate__flipInX animate__delay-1s">
-                  <img class="image" src="../Ass/img/a2.jpg">
+                  <img class="image" src="/img/a2.jpg">
                   <h3>Quality Service</h3>
               </div>
          <div class="feature-box col-lg-4 animate__animated animate__flipInX animate__delay-2s">
-              <img class="image" src="../Ass/img/a3.jpg">
+              <img class="image" src="/img/a3.jpg">
                   <h3>Perfect Service</h3>
               </div>
           </div>
