--- a/StationServerSide/views/include/_show.ejs
+++ b/StationServerSide/views/include/_show.ejs
@@ -5,7 +5,7 @@
        <td><%= users[i].Break%></td>
        <td><%= users[i].gender %></td>
        <td><%= users[i].status%></td>
-       <td><%= users[i].Date%></td>
+<!--       <td><%= users[i].Date%></td>-->
   <td>
    <a href="/update-user?id=<%= users[i]._id%>" 
       class="btn border-shadow update">
