--- a/StationServerSide/views/index.ejs
+++ b/StationServerSide/views/index.ejs
@@ -20,7 +20,7 @@
                              <th>Break</th>
                             <th>Status</th>
                             <th>Action</th>
-                            <th>Date</th>
+<!--                            <th>Date</th>-->
                         </tr>
                     </thead>
                     <tbody>
