--- a/logInServerSide/views/GoogleMap.ejs
+++ b/logInServerSide/views/GoogleMap.ejs
@@ -1,7 +1,7 @@
 <%- include ('include/header') %>
 
 <link rel="stylesheet" href="/css/GMap.css">
-<script src="/js/Gmap.js"></script>
+
 <link href="/js/Gmap.js">
 <body >
     <body>
@@ -40,5 +40,5 @@
       <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdnEnnQjsP878uvjKwucRYwGnc47hs3RE&callback=initMap">
 </script>
-     
+     <script src="/js/GMap.js"></script>
      <%- include ('include/footer') %>
