--- a/logInServerSide/views/Station.ejs
+++ b/logInServerSide/views/Station.ejs
@@ -1,6 +1,6 @@
 <%- include ('include/header') %>
 
-
+<link rel="stylesheet" href="/css/station.css">
 <body>
    <section id="title" class="title">
     <div class="container-fluid">
@@ -36,7 +36,7 @@
             <button type="button" class="btn btn-outline-light">Station</button>-->
       </div>
       <div class="col-lg-6 col-md-6 animate__animated animate__backInRight">
-      <img class="image-title"  src="../imeges/Light%20Blue%20Cute%20Car%20Cartoon%20Car%20Wash%20Poster_opt.png">
+      <img class="image-title"  src="/img/Light%20Blue%20Cute%20Car%20Cartoon%20Car%20Wash%20Poster_opt.png">
            </div>
       </div>
     </div>
@@ -275,4 +275,5 @@
  </div>
  
         </section>
+    <script src="/js/station.js"></script>
 <%- include ('include/footer') %>
