--- a/logInServerSide/views/index.ejs
+++ b/logInServerSide/views/index.ejs
@@ -5,6 +5,7 @@
 <a href="/login" class="btn btn-lg btn-secondary">Log In</a>
 -->
 
+<link rel="stylesheet" href="/Ass/animate.min.css">
 <link rel="stylesheet" href="/css/style1.css">
 <section id="title" class="title">
     <div class="container-fluid">
@@ -53,7 +54,7 @@
               </div>
               <div  class="col-lg-6 col-md-6 animate__animated animate__slideInRight">
                   <h1> Welcome to our new and improved  car  service</h1>
-                  <h5>About Our Car Services</h5>
+                  <h2>About Our Car Services</h2>
                   <p> Welcome to our new improve car for a wonderful service. we use normal wash and ceramic wash(foam) and DrayClean.Enjoy!  
                   </p>
               </div>
@@ -65,7 +66,7 @@
               </div>
               <div  class="col-lg-6 col-md-6 ">
                   <h1> Welcome to our new  car  service</h1>
-                  <h5>About Our Car Services</h5>
+                  <h2>About Our Car Services</h2>
                   <p> Welcome to our new improve car for a wonderful service. we use Change The oil services based on the station services.Enjoy!  
                   </p>
               </div>
@@ -135,7 +136,6 @@
           </div>
        </div>
       </section>
-
 
 
      
