--- a/logInServerSide/views/include/header.ejs
+++ b/logInServerSide/views/include/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-     <link rel="shortcut icon" href="../imeges/4.ico" type="image/x-icon">
+     <link rel="shortcut icon" href="/img/4.ico" type="image/x-icon">
 
       <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
