--- a/logInServerSide/views/login.ejs
+++ b/logInServerSide/views/login.ejs
@@ -36,7 +36,7 @@
             <div class="col-lg-7 px-5 pt-5">
                 <h1 class="font-weight-bold py-3"> </h1>
                 <h4>Sign into your account</h4>
-            <form  method="post" action="/login">
+            <form  method="POST" action="/login">
                 <div class="form-row">
                     <div class="col-lg-7">
                         <label for ="InputUserName"> UserName</label>
@@ -46,8 +46,8 @@
 
                 <div class="form-row">
                  <div class="col-lg-7">
-                <label for ="InputPassword">Password</label>
-               <input class="form-control" type="password" id="InputPassword" placeholder="InputPassword"  name="Password">
+                <label for ="InputPassword1">Password</label>
+               <input class="form-control" type="password" id="InputPassword" placeholder="InputPassword"  name="password">
                     </div>
                 </div>  
                 
