--- a/logInServerSide/views/register.ejs
+++ b/logInServerSide/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include("./include/header") %>
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="img">
+
 <body>
       <section class="form my-4 mx-5">
           
@@ -36,11 +36,11 @@
             <div class="col-lg-6 px-5 pt-5">
                 <h1 class="font-weight-bold py-3"> </h1>
                 <h4>Sign up your account</h4>
-            <form  method="post" action="/register">
+            <form  method="POST" action="/register" >
                 <div class="form-row">
                     <div class="col-lg-6">
                         <label for ="InputUserName">UserName</label>
-                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="UserName"   placeholder="First Name" >
+                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="UserName"   placeholder="UserName" >
                     </div>
                 </div>
                          <div class="form-row">
