--- a/StationServerSide/views/include/_show.ejs
+++ b/StationServerSide/views/include/_show.ejs
@@ -11,7 +11,7 @@
       class="btn border-shadow update">
     <span class="text-gradient"><i class="fas fa-pencil-alt">    </i>  </span>
          </a>
-     <a  class="btn border-shadow delet" data-id=<%= users[i]._id%> >
+     <a  class="btn border-shadow delete" data-id=<%= users[i]._id%>>
         <span class="text-gradient"><i class="fas fa-times"></i></span>
           </a>
       </td>
