--- a/logInServerSide/views/login.ejs
+++ b/logInServerSide/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include("./include/header") %>
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="img">
+
 <body>
       <section class="form my-4 mx-5">
           
@@ -8,9 +8,8 @@
           <nav class="navbar navbar-expand-lg ">
 <a class="navbar-brand" href="/index">PapayForCar</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    <span></span>
-    <span></span>
+    <span class="navbar-toggler-icon">men</span>
+  
   </button>
        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
        <ul class=" navbar-nav ml-auto">
@@ -40,20 +39,20 @@
                 <div class="form-row">
                     <div class="col-lg-7">
                         <label for ="InputUserName"> UserName</label>
-                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="name"  placeholder="UserName" >
+                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="UserName"  placeholder="UserName" >
                     </div>
                 </div>
 
                 <div class="form-row">
                  <div class="col-lg-7">
                 <label for ="InputPassword1">Password</label>
-               <input class="form-control" type="password" id="InputPassword" placeholder="InputPassword"  name="password">
+               <input class="form-control" type="password" id="InputPassword" placeholder="InputPassword"  name="Password">
                     </div>
                 </div>  
                 
                 <div class="form-row">
                  <div class="col-lg-7">
-            <button type="submit" class="btn1 mt-3 mb-5 "> <a  id="a" href="/services">LogIn</a>
+            <button type="submit" class="btn1 mt-3 mb-5 "> <a  id="a" href="/login">LogIn</a>
                      </button>
                    <a href="/" class="btn1 mt-3 mb-5 btn-primary">Go Back</a>
 
