--- a/logInServerSide/views/register.ejs
+++ b/logInServerSide/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include("./include/header") %>
+<%- include("include/header") %>
 <link rel="stylesheet" href="css/style.css">
 
 <body>
@@ -8,9 +8,7 @@
           <nav class="navbar navbar-expand-lg ">
 <a class="navbar-brand" href="/index">PapayForCar</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    <span></span>
-    <span></span>
+    <span class="navbar-toggler-icon">men</span>
   </button>
        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
        <ul class=" navbar-nav ml-auto">
@@ -36,11 +34,11 @@
             <div class="col-lg-6 px-5 pt-5">
                 <h1 class="font-weight-bold py-3"> </h1>
                 <h4>Sign up your account</h4>
-            <form  method="POST" action="/register" >
+            <form  method="POST" action="/register" autocomplete="off" >
                 <div class="form-row">
                     <div class="col-lg-6">
                         <label for ="InputUserName">UserName</label>
-                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="UserName"   placeholder="UserName" >
+                    <input class="form-control my-3 p-4" id="InputUserName" type="text" name="UserName"   placeholder="InputUserName" >
                     </div>
                 </div>
                          <div class="form-row">
@@ -63,9 +61,10 @@
                     </div>
                 </div> 
                 
+
                 <div class="form-row">
                  <div class="col-lg-6">
-            <button type="submit" class="btn1 mt-3 mb-5 "><a href="/login"> Register
+            <button type="submit" class="btn1 mt-3 mb-5 "><a href="/register"> Register
                   </a>   </button>
                  <a href="/" class="btn1 mt-3 mb-5">Go Back</a>
                     </div>
@@ -77,4 +76,4 @@
           </div>
       </section>
 
-<%- include("./include/footer") %>
+<%- include("include/footer") %>
